# chesapeake-lulc

./: CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile-dev
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: Baywide_13Class_20132014_E1300000_N1770000.json  Baywide_7class_20132014_E1300000_N1770000.json  chesapeake-lc-13.txt  chesapeake-lc-7.txt  chesapeake-lu.txt
examples/chesapeake-lc-13/: collection.json
examples/chesapeake-lc-13/Baywide_13Class_20132014_E1300000_N1770000/: Baywide_13Class_20132014_E1300000_N1770000.json
examples/chesapeake-lc-7/: collection.json
examples/chesapeake-lc-7/Baywide_7Class_20132014_E1300000_N1770000/: Baywide_7Class_20132014_E1300000_N1770000.json
examples/chesapeake-lu/: collection.json
examples/chesapeake-lu/BayWide_1m_LU_E1300000_N1770000/: BayWide_1m_LU_E1300000_N1770000.json
examples/landcover-13-classes/: collection.json
examples/landcover-13-classes/Baywide_13Class_20132014_E1300000_N1770000/: Baywide_13Class_20132014_E1300000_N1770000.json
examples/landcover-7-classes/: collection.json
examples/landcover-7-classes/Baywide_7Class_20132014_E1300000_N1770000/: Baywide_7Class_20132014_E1300000_N1770000.json
examples/landuse/: collection.json
examples/landuse/BayWide_1m_LU_E1300000_N1770000/: BayWide_1m_LU_E1300000_N1770000.json
scripts/: lint
src/stactools/cclc/: __init__.py  commands.py  constants.py  fragments.py  metadata.py  stac.py  utils.py
src/stactools/cclc/fragments/cc-lc-13-class/: collection.json
src/stactools/cclc/fragments/cc-lc-7-class/: asset.json  (+1 more)
src/stactools/chesapeake/: __init__.py  commands.py  constants.py  fragments.py  metadata.py  stac.py  utils.py
src/stactools/chesapeake_lulc/: __init__.py  commands.py  fragments.py  metadata.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: BayWide_1m_LU_E1300000_N1770000.tif  Baywide_13Class_20132014_E1300000_N1770000.tif  Baywide_7class_20132014_E1300000_N1770000.tif
(+10 files in other folders)
