[metadata]
name = stactools-cclc
version = attr: stactools.cclc.__version__
description = stactools package for Chesapeake Conservancy Land Cover (CCLC) data
long_description = file: README.md
long_description_content_type = text/markdown
author = Presotn Hartzell
author_email = preston.hartzell@gmail.com
url = https://github.com/stactools-packages/cclc
project_urls =
    Issues = https://github.com/stactools-packages/cclc/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    chesapeake
    landcover
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.2.6

[options.packages.find]
where = src

[options.package_data]
stactools.cclc = fragments/*/*.json
